==Current==
* Fixed video renderer and floating bus sync
* Improved component framework error messages
* Fixed video flicker when changing NTSC/PAL in mixed mode
* Implemented Apple II j-plus
* Implemented Apple II plus
* Refactorized and fixed ControlBus, scheduleTimer(), invalidateTimers(), setCPUClockMultiplier()
* Fixed AppleIIVideo screen blanking when power is turned off

==OpenEmulator 1.0.2 23/12/2011==
* Connected AppleIIVideoSync
* Implemented AppleIIVideo left border hires bit 7
* Fixed horizontal and vertical counts
* Fixed AppleIIVideo lastSegment bug
* Fixed ControlBus scheduler bug
* Optimized AppleIIVideo
* Fixed ControlBus, so overdone cycles are notified
* Fixed JoystickMapper transformations
* Implemented Apple II shift key mod
* Added keyboard modifiers to the canvas interface
* Implemented Apple II CTRL+BACKSPACE and CTRL+COMMAND+BACKSPACE
* Added update() call on addDocument/removeDevice
* Fixed Apple II NTSC/PAL switching
* Fixed mouse tracking in capture mode
* Implemented JoystickMapper buttons and relative axes
* Implemented JoystickMapper
* Refactorized joystick interface
* Implemented Apple Game Controllers
* Implemented Mac OS X joystick support
* Implemented AppleIIVideo PAL/NTSC
* Implemented Apple II copy
* Fixed color carrier per scanline
* Implemented Apple II hires mode
* Implemented Apple II revision 1+
* Optimized Apple1Terminal
* Implemented AppleIIFloatingBus
* Implemented Apple II lores mode
* Implemented Apple II text video mode
* Fixed printing in Mac OS X
* Fixed window resizing in Mac OS X
* Optimized MMU
* Added postNotification to OEComponent
* Implemented monitor White Only
* Implemented AppleIIKeyboard
* Added monitor safe area
* Fixed Monitor bezel on init
* Added OEComponent dispose() callback
* Fixed last frame error in audio player 
* Implemented AppleIIGamePort
* Updated Replica-1 ROM to KRUSADER 1.3
* Implemented generic MMU
* Refactorized OpenEmulator memory paradigm

==OpenEmulator 1.0.1 26/10/2011==