@@ -1,4 +1,6 @@
 ==Current==
+* Fixed audio recorder lock
+* Fixed Apple-1 strange noises when loading files
 * Fixed video renderer and floating bus sync
 * Improved component framework error messages
 * Fixed video flicker when changing NTSC/PAL in mixed mode
